--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,11 +11,9 @@ website:
 
 format:
   html:
-    theme:
-      - cosmo
-      - brand
+    theme: cosmo
     css: styles.css
     toc: true
-
-editor: visual
-
+    
+execute: 
+  freeze: auto
